Fixed a few key issues, still couldn't fix course columns gap not working

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
@@ -22,11 +20,11 @@ body {
 }
 
 .navbar {
-    height:5rem;
+    height: 5rem;
 }
 
 .navbar-collapse {
-    background-color:  #f8f9fa;
+    background-color: #f8f9fa;
 }
 
 .navbar .navbar-nav .nav-item {
@@ -50,6 +48,7 @@ body {
         width: 70%;
     }
 }
+
 .masthead {
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../images/smartphone.jpg);
     background-attachment: fixed;
@@ -141,7 +140,7 @@ body {
 
 /*---------- course --------*/
 
-.signup-button button{
+.signup-button button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -159,10 +158,7 @@ body {
 }
 
 .course {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 100px;
+    text-align: center;padding-top: 100px;
 }
 
 h1 {
@@ -177,13 +173,6 @@ p {
     line-height: 22px;
     padding: 10px;
 }
-
-@media (min-width: 768px){
-    .course .col-md-4 {
-        max-width: 33%;
-    }
-}
-
 
 .course-col {
     background: #c1e1ec;
@@ -500,7 +489,7 @@ body {
 
 .blog-left p {
     color: #999;
-    padding: 5;
+    padding: 5px;
     font-size: 18px;
 }
 
@@ -656,12 +645,9 @@ body {
 
 
 .container {
-    position: relative;
-    max-width: 900px;
     width: 100%;
     border-radius: 6px;
-    padding: 30px;
-    margin: 100px 100px;
+    margin: 100px 0;
     background-color: #fff;
 }
 
